app/assets/stylesheets/models/questions.css.scss
.question-table {
  col.actions {
    width: 100px;
  }

  col.age {
    width: 240px;
  }

  col.name {
    width: 150px;
  }

  td.actions {
    vertical-align: middle;
  }

  .selection-row {
    cursor: pointer;

    &:hover {
      background-color: table-hover-bg;
    }
  }

  table-layout: fixed;
}

.question-index-table {
  col.actions {
    width: 100px;
  }

  col.age {
    width: 240px;
  }

  col.status {
    width: 240px;
  }

  col.name {
    width: 170px;
  }

  col.view {
    width: 35px;
  }

  .selection-row {
    cursor: pointer;

    &:hover {
      background-color: $table-hover-bg;
    }
  }

  table-layout: fixed;
}

.icon-indent {
  padding-left: 23px;
}

